Add 404 page and error handling

--- a/views/layouts/404.ejs
+++ b/views/layouts/404.ejs
@@ -1,16 +1,15 @@
-<!-- messageDetail.ejs -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Message detail</title>
+    <title>404</title>
 </head>
 <body>
-    <main class="board">
-        <%- include("../messages/detail" , {message: message}) %>
+    <main class="notFound board">
+        <h1>404 Error</h1>
+        <p>Page Not Found</p>
     </main>
 </body>
 </html>
