--- a/views/messages/detail.ejs
+++ b/views/messages/detail.ejs
@@ -1,4 +1,4 @@
-<!-- message detail -->
+<!-- detail.ejs -->
 
 <section class="detail" style="background-color: <%= message.bgColor %>;">
     <h1 style="text-align: center; margin-bottom: 1.3rem;">Message Detail</h1>
