--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -121,7 +121,6 @@ img {
 
 
 .item {
-  padding: 20px 15px;
   border-radius: 2px;
 
   box-shadow:
@@ -159,6 +158,14 @@ img {
   z-index: 100;
 }
 
+.item a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 15px 20px;
+    cursor: grab;
+}
+
 .detail{
     display: flex;
     flex-direction: column;
@@ -190,6 +197,13 @@ img {
 .backBtn:hover{
     text-decoration: none;
     background-color: #222222cf;
+}
+
+.notFound{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (max-width: 1068px) {
