--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,7 +12,7 @@
     <main class="board">
         <header class="head">
             <h1>Messages</h1>
-            <button>add</button>
+            <a href="/new" rel="noopener">Add</a>
         </header>
         <section>
             <ul class="messages">
