--- a/views/layouts/form.ejs
+++ b/views/layouts/form.ejs
@@ -16,8 +16,10 @@
             <input type="text" id="name" name="user">
             <label for="content">CONTENT</label>
             <input type="text" id="content" name="text">
+            <label for="bgColor">Choose a background color:</label>
+            <input type="color" id="bgColor" name="bgColor" value="#ff2356">
             <div class="btnGroup">
-                <button type="button">Cancel</button>
+                <a href="/" type="button">Cancel</a>
                 <button type="submit">Create</button>
             </div>
 
