Add a query to get messages from the database and change the message controller to use it.

--- a/views/messages/list.ejs
+++ b/views/messages/list.ejs
@@ -1,6 +1,6 @@
 <!-- list.ejs -->
 
-<li class="item" style="background-color: <%= message.bgColor %> ; --rotate: <%= Math.random().toFixed(2) %>;">
+<li class="item" style="background-color: <%= message.bg_color %> ; --rotate: <%= Math.random().toFixed(2) %>;">
     <a href="/detail/<%= message.id %>" rel="noopener">
     <%= message.text %>
     </a>
