--- a/views/messages/detail.ejs
+++ b/views/messages/detail.ejs
@@ -1,6 +1,6 @@
 <!-- detail.ejs -->
 
-<section class="detail" style="background-color: <%= message.bgColor %>;">
+<section class="detail" style="background-color: <%= message.bg_color %>;">
     <h1 style="text-align: center; margin-bottom: 1.3rem;">Message Detail</h1>
     <p>Content: <span class="inf"><%= message.text %> </span></p>
     <p>Author: <span class="inf"><%= message.user %> </span></p>
